<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/android_color"
    tools:context=".RegisterActivity">

    <android.widget.Button
        android:id="@+id/buttonSelectPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_select_photo"
        android:textColor="@color/white"
        android:text="Select Photo"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegister"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edit_text_login"
        android:ems="10"
        android:hint="@string/username_hint_registration"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edit_text_login"
        android:ems="10"
        android:hint="@string/email_hint_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegister" />

    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edit_text_login"
        android:paddingLeft="16dp"
        android:ems="10"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister" />

    <android.widget.Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:background="@drawable/rounded_botton"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister" />

    <TextView
        android:id="@+id/alreadyHaveAccountRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/already_account_link"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectPhoto"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectPhoto"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectPhoto"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectPhoto"></de.hdodenhof.circleimageview.CircleImageView>


</androidx.constraintlayout.widget.ConstraintLayout>